Updated more functionality, and started on aktivitetsvelger

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div class="noise"></div>
     <canvas class="confetti" aria-hidden="true"></canvas>
     <header class="site-header">
-      <div class="logo">
+      <a class="logo" href="index.html" aria-label="Til forsiden">
         <div class="logo-title">Daniela Lucia Sanchez</div>
         <div class="logo-subtitle">Verdens beste menneske</div>
-      </div>
+      </a>
       <button class="menu-button" type="button" aria-expanded="false" aria-controls="side-menu">
         <span class="menu-label">Menu</span>
         <span class="menu-icon" aria-hidden="true">
@@ -105,7 +105,7 @@
       <nav class="side-menu-links">
         <a href="#om-deg">Om deg</a>
         <a href="#fantastisk">Hvorfor du er så fantastisk?</a>
-        <a href="#aktivitetsvelgeren">Aktivitetsvelgeren</a>
+        <a href="activity.html">Aktivitetsvelgeren</a>
       </nav>
     </aside>
     <div class="menu-backdrop" hidden></div>
