Completed date and about section

--- a/activity.html
+++ b/activity.html
@@ -22,7 +22,7 @@
         <h1 id="kveld-tittel">Hva slags type kveld vil du ha?</h1>
         <div class="choice-row" role="radiogroup" aria-label="Velg type kveld">
           <label class="choice-card">
-            <span>Romantisk</span>
+            <span>Date</span>
             <input type="radio" name="kveld" value="romantisk" />
           </label>
           <span class="choice-divider" aria-hidden="true">eller</span>
