--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <button class="menu-close" type="button" aria-label="Close menu">Close</button>
       </div>
       <nav class="side-menu-links">
-        <a href="#om-deg">Om deg</a>
+        <a href="about.html">Om Dani</a>
         <a href="#fantastisk">Hvorfor du er så fantastisk?</a>
         <a href="activity.html">Aktivitetsvelgeren</a>
       </nav>
