Added the knitting page

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       </div>
       <nav class="side-menu-links">
         <a href="about.html">Om Dani</a>
-        <a href="#fantastisk">Hvorfor du er så fantastisk?</a>
+        <a href="strikkeoppskrifter.html">Strikkeoppskrifter</a>
         <a href="activity.html">Aktivitetsvelgeren</a>
       </nav>
     </aside>
