Added minigame and fix to mobile view on Om Dani page

--- a/about.html
+++ b/about.html
@@ -40,10 +40,7 @@
             flyttet familien til Norge. De endte opp i bydelen Hundvåg, i Stavanger kommune, og
             det var her Daniela vokste opp.
           </p>
-          <figure
-            class="story-media below center story-media--small"
-            style="transform: translate(-70px, -280px); width: min(520px, 84vw);"
-          >
+          <figure class="story-media below center story-media--small story-media--offset-large">
             <img src="resources/omdeg/HUNDVG~1.WEB" alt="Hundvåg" />
           </figure>
         </div>
@@ -145,10 +142,7 @@
             <figure class="story-media below story-media--small">
               <img src="resources/omdeg/INNEBA~1.JPG" alt="Innebandy" />
             </figure>
-            <figure
-              class="story-media below story-media--small story-media--tiny"
-              style="transform: translateY(-260px); margin-bottom: -260px;"
-            >
+            <figure class="story-media below story-media--small story-media--tiny story-media--offset-tall">
               <img src="resources/omdeg/ski.JPG" alt="Ski" />
             </figure>
           </div>
