--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
         <a href="about.html">Om Dani</a>
         <a href="strikkeoppskrifter.html">Strikkeoppskrifter</a>
         <a href="activity.html">Aktivitetsvelgeren</a>
+        <a href="minigame.html">Minigame</a>
       </nav>
     </aside>
     <div class="menu-backdrop" hidden></div>
