Fixed image loading issue

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
             det var her Daniela vokste opp.
           </p>
           <figure class="story-media below center story-media--small story-media--offset-large">
-            <img src="resources/omdeg/HUNDVG~1.WEB" alt="Hundvåg" />
+            <img src="resources/omdeg/hundvåg.webp" alt="Hundvåg" />
           </figure>
         </div>
 
@@ -54,23 +54,23 @@
 
         <div class="story-block">
           <figure class="story-media right story-media--small">
-            <img src="resources/omdeg/SSKEN1~1.JPG" alt="Søsken 1" />
+            <img src="resources/omdeg/søsken1.jpg" alt="Søsken 1" />
           </figure>
           <figure class="story-media right story-media--small">
-            <img src="resources/omdeg/SSKEN2~1.JPG" alt="Søsken 2" />
+            <img src="resources/omdeg/søsken2.jpg" alt="Søsken 2" />
           </figure>
           <figure class="story-media right story-media--small">
-            <img src="resources/omdeg/SSKEN3~1.JPG" alt="Søsken 3" />
+            <img src="resources/omdeg/søsken3.jpg" alt="Søsken 3" />
           </figure>
           <p>Hun, og sine tre søsken ble en tett knyttet gjeng.</p>
         </div>
 
         <div class="story-block">
           <figure class="story-media left story-media--small">
-            <img src="resources/omdeg/SSTER1~1.JPG" alt="Søster 1" />
+            <img src="resources/omdeg/søster1.jpg" alt="Søster 1" />
           </figure>
           <figure class="story-media left story-media--small">
-            <img src="resources/omdeg/SSTER2~1.JPG" alt="Søster 2" />
+            <img src="resources/omdeg/søster2.jpg" alt="Søster 2" />
           </figure>
           <p>Men hun har alltid hatt et spesielt bånd med sin søster Cristina.</p>
         </div>
@@ -86,7 +86,7 @@
             <img src="resources/omdeg/kostyme.jpg" alt="Kostyme" />
           </figure>
           <figure class="story-media right story-media--small">
-            <img src="resources/omdeg/RULLES~1.JPG" alt="Rulleskøyter" />
+            <img src="resources/omdeg/rulleskøyter.jpg" alt="Rulleskøyter" />
           </figure>
           <p>Hun har alltid vært en utforskende person, og var glad i å prøve nye aktiviteter og antrekk.</p>
         </div>
@@ -95,10 +95,10 @@
 
         <div class="story-block">
           <figure class="story-media left story-media--small">
-            <img src="resources/omdeg/INNFLY~1.JPG" alt="Innflytting" />
+            <img src="resources/omdeg/innflytting.JPG" alt="Innflytting" />
           </figure>
           <figure class="story-media left story-media--small">
-            <img src="resources/omdeg/PSOFA~1.JPG" alt="På sofaen" />
+            <img src="resources/omdeg/påsofa.jpg" alt="På sofaen" />
           </figure>
           <p>
             Etter videregående skole tok hun den lange turen til Trondheim, for å ta
@@ -109,7 +109,7 @@
 
         <div class="story-block">
           <figure class="story-media right story-media--small">
-            <img src="resources/omdeg/UTSTIL~1.JPG" alt="Utstilling 1" />
+            <img src="resources/omdeg/utstilling1.JPG" alt="Utstilling 1" />
           </figure>
           <figure class="story-media right story-media--small">
             <img src="resources/omdeg/UTSTIL~2.JPG" alt="Utstilling 2" />
@@ -137,10 +137,10 @@
               <img src="resources/omdeg/telttur.JPG" alt="Telttur" />
             </figure>
             <figure class="story-media below story-media--small">
-              <img src="resources/omdeg/BADEST~1.JPG" alt="Badestedet" />
+              <img src="resources/omdeg/badestedet.JPG" alt="Badestedet" />
             </figure>
             <figure class="story-media below story-media--small">
-              <img src="resources/omdeg/INNEBA~1.JPG" alt="Innebandy" />
+              <img src="resources/omdeg/innebandy.JPG" alt="Innebandy" />
             </figure>
             <figure class="story-media below story-media--small story-media--tiny story-media--offset-tall">
               <img src="resources/omdeg/ski.JPG" alt="Ski" />
@@ -191,7 +191,7 @@
             <img src="resources/omdeg/pizza.jpg" alt="Pizza" />
           </figure>
           <figure class="story-media right story-media--small">
-            <img src="resources/omdeg/BLSKJE~1.JPG" alt="Blåskjell" />
+            <img src="resources/omdeg/blåskjell.jpg" alt="Blåskjell" />
           </figure>
           <p>
             Hun er også glad i å utforske den kulinariske verdenen, og sier ikke nei til en god
