Final image resolvement for Om Dani page

--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
             <img src="resources/omdeg/utstilling1.JPG" alt="Utstilling 1" />
           </figure>
           <figure class="story-media right story-media--small">
-            <img src="resources/omdeg/UTSTIL~2.JPG" alt="Utstilling 2" />
+            <img src="resources/omdeg/utstilling2.JPG" alt="Utstilling 2" />
           </figure>
           <p>På studiet har hun lært mange imponerende nye ferdigheter innenfor håndverk.</p>
         </div>
